# AoC

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/2015/: aoc_2015_01.cpp  aoc_2015_01.hpp  aoc_2015_02.cpp  aoc_2015_02.hpp  aoc_2015_03.cpp  aoc_2015_03.hpp  aoc_2015_04.cpp  aoc_2015_04.hpp  aoc_2015_05.cpp  aoc_2015_05.hpp  aoc_2015_06.cpp  aoc_2015_06.hpp
src/2015/test/: test_1_1.txt  test_1_2.txt  test_2_1.txt  test_2_2.txt  test_3_2.txt  test_4_2.txt  test_5_2.txt
src/2016/: aoc_2016_01.cpp  aoc_2016_01.hpp  aoc_2016_02.cpp  aoc_2016_02.hpp  aoc_2016_03.cpp  aoc_2016_03.hpp
src/2016/test/: test_2_1.txt  test_2_2.txt  test_3_1.txt  test_3_2.txt
src/2017/: aoc_2017_01.cpp  aoc_2017_01.hpp  aoc_2017_02.cpp  aoc_2017_02.hpp  aoc_2017_03.cpp  aoc_2017_03.hpp
src/2017/test/: test_2_1.txt  test_2_2.txt  test_3_1.txt  test_3_2.txt
src/2018/: aoc_2018_01.cpp  aoc_2018_01.hpp  aoc_2018_02.cpp  aoc_2018_02.hpp  aoc_2018_03.cpp  aoc_2018_03.hpp
src/2019/: aoc_2019_01.cpp  aoc_2019_01.hpp  aoc_2019_02.cpp  aoc_2019_02.hpp  aoc_2019_03.cpp  aoc_2019_03.hpp
src/2019/test/: test_1_1.txt  test_1_2.txt  test_2_1.txt  test_2_2.txt  test_3_1.txt  test_3_2.txt
src/2020/: aoc_2020_01.cpp  aoc_2020_01.hpp  aoc_2020_02.cpp  aoc_2020_02.hpp  aoc_2020_03.cpp  aoc_2020_03.hpp
src/2020/input/: day_1.txt
src/2021/: aoc_2021_01.cpp  aoc_2021_01.hpp  aoc_2021_02.cpp  aoc_2021_02.hpp  aoc_2021_03.cpp  aoc_2021_03.hpp
src/2021/test/: test_2_1.txt  test_2_2.txt  test_3_1.txt  test_3_2.txt
src/2022/: aoc_2022_01.cpp  aoc_2022_01.hpp  aoc_2022_02.cpp  aoc_2022_02.hpp  aoc_2022_03.cpp  aoc_2022_03.hpp  aoc_2022_04.cpp  aoc_2022_04.hpp  aoc_2022_05.cpp  aoc_2022_05.hpp  aoc_2022_06.cpp  aoc_2022_06.hpp  aoc_2022_07.cpp  aoc_2022_07.hpp  aoc_2022_08.cpp  aoc_2022_08.hpp  aoc_2022_09.cpp  aoc_2022_09.hpp  aoc_2022_10.cpp  aoc_2022_10.hpp  aoc_2022_11.cpp  aoc_2022_11.hpp
src/2022/test/: test_11_2.txt  test_1_1.txt  test_1_2.txt  test_2_1.txt  test_2_2.txt  test_3_1.txt  test_3_2.txt  test_4_1.txt  test_4_2.txt  test_5_1.txt  test_5_2.txt  test_6_1.txt  test_6_2.txt  test_7_1.txt  test_7_2.txt  test_8_1.txt  test_8_2.txt  test_9_1.txt  test_9_2.txt
src/2023/: aoc_2023_01.cpp  aoc_2023_01.hpp  aoc_2023_02.cpp  aoc_2023_02.hpp  aoc_2023_03.cpp  aoc_2023_03.hpp  aoc_2023_04.cpp  aoc_2023_04.hpp  aoc_2023_05.cpp  aoc_2023_05.hpp
src/2023/test/: test_2_2.txt  test_3_1.txt  test_3_2.txt  test_4_1.txt  test_4_2.txt  test_5_1.txt
src/Template/: aoc_20xx_01.cpp  aoc_20xx_01.hpp
